# fred

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyrightconfig.json  start.sh
agentic-backend/: AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
agentic-backend/.baseline/: basedpyright-baseline.json
agentic-backend/.github/: copilot-instructions.md
agentic-backend/agentic_backend/: application_context.py  main.py  main_worker.py
agentic-backend/agentic_backend/academy/: ACADEMY.md
agentic-backend/agentic_backend/agents/: __init__.py
agentic-backend/agentic_backend/banking/: README.md  __init__.py  agent.py
agentic-backend/agentic_backend/common/: catalog_overrides.py  chat_options_protocol.py  config_loader.py  error.py  kf_base_client.py  kf_fast_text_client.py  kf_http_client.py  kf_logs_client.py  kf_markdown_media_client.py  kf_vectorsearch_client.py  kf_workspace_client.py  mcp_runtime.py  mcp_toolkit.py  mcp_utils.py  rags_utils.py  structures.py  tool_node_utils.py  vector_search_client.py
agentic-backend/agentic_backend/integrations/: __init__.py
agentic-backend/agentic_backend/models/: __init__.py  base.py
agentic-backend/agentic_backend/scheduler/: scheduler_controller.py  scheduler_service.py
agentic-backend/agentic_backend/tests/: conftest.py  test_agent_service_team_backfill.py  test_chatbot_controller.py  test_feedback_controller.py  test_monitoring_controller.py  test_postgres_feedback_store.py  test_postgres_history_store_metrics.py  test_reference_editor_security.py  test_restore_history.py  test_tool_loop_system_message.py  test_v2_resume_recovery.py
agentic-backend/alembic/: env.py
agentic-backend/alembic/backfill/: backfill_agent_kf_vector_search_tags.py
agentic-backend/alembic/versions/: 5978e4ad3e1b_backfill_agent_kf_vector_search_mcp_params.py  5c9bc83efbfb_upgrade_session_schema.py  73a8607a014a_add_feedbacks_table.py  82d43cf766d9_update_data_session_add_team_id_in_json.py  8e5a41c87864_initial_schema.py  bb94940fde0c_add_tasks_table.py  e89ab9e7ca5f_update_data_session_migrate_team_scoping.py
agentic-backend/config/: .env.template  agents_catalog.yaml  configuration.yaml  configuration_academy.yaml  configuration_bench.yaml  configuration_deprecated.yaml  configuration_gcp.yaml  configuration_prod.yaml  configuration_worker.yaml  mcp_catalog.yaml  models_catalog.yaml
agentic-backend/dockerfiles/: Dockerfile-prod
agentic-backend/docs/: AGENTS.md  AGENT_RUNTIME_LIFECYCLE_SPEC.md  AGENT_SPECIFICATION.md  CATALOG_FILES_PATTERN.md  DEVELOPER_GUIDE.md  DOC_STATUS.md  FEATURE_MAP.md  GENAI_SDK_COMPATIBILITY_CHALLENGE.md  GENAI_SDK_SPEC.md  GRAPH_DEBUG_PLAYBOOK.md  GRAPH_RUNTIME_CONTRACT.md  GRAPH_RUNTIME_MATURITY_AND_LANGGRAPH_USAGE.md  GRAPH_VS_REACT_POSTAL_CASE.md  HISTORY_VS_CHECKPOINTING.md  LANGGRAPH_POSTGRES_SAVER_EVALUATION.md  LEGACY_FEATURE_SCAN.md  MCP.md  MODEL_PROVIDER_PRIMER.md  MODEL_ROUTING_PATTERN.md  MODEL_ROUTING_USER_RULES_SPEC.md  PROTOCOL.md  RAG_AGENT.md  README.md  RUNTIME_ARCHITECTURE.md  RUNTIME_VS_LANGCHAIN_MIDDLEWARE.md  TABULAR_AGENT.md
agentic-backend/tests/: test_aegis_runtime_contract.py  test_agent_v2_contracts.py  test_agent_v2_deep_runtime.py  test_agent_v2_model_routing.py  test_agent_v2_profile_bridge.py  test_agent_v2_react_runtime.py  test_agent_v2_trace_summary.py  test_agent_v2_ui_integration.py  test_bid_intake_graph_v2.py  test_catalog_overrides.py  test_debug_runtime_context.py  test_dva_risk_validator_authoring.py  test_graph_authoring_api.py  test_hitl_payload_validation.py  test_kf_vectorsearch_intersection.py  test_mcp_runtime.py  test_ppt_filler_react_v2.py  test_prometheus_spot.py  test_skill_mastery.py  test_sql_agent_authoring.py  test_tool_context_config.py  test_tracking_graph_v2.py  test_v2_artifact_publisher.py  test_v2_langfuse_tracer_adapter.py  test_v2_memory.py  test_workspace_cleanup.py
control-plane-backend/: .coveragerc  AGENTS.md  CLAUDE.md  Makefile  README.md  openapi.json  pyproject.toml
control-plane-backend/.baseline/: bandit-baseline.json  detect-secret-baseline.json
control-plane-backend/.github/: copilot-instructions.md
control-plane-backend/alembic/: env.py
control-plane-backend/alembic/versions/: a1b2c3d4e5f6_add_session_purge_queue.py  c789f5ab40fe_create_table_users.py  d01a50e94bec_initial_schema.py
control-plane-backend/config/: .env.template  configuration.yaml  configuration_prod.yaml  configuration_test.yaml  configuration_worker.yaml  conversation_policy_catalog.yaml
control-plane-backend/control_plane_backend/: __init__.py  application_context.py  main.py  main_worker.py  purge_queue_store.py  team_metadata_store.py  teams_controller.py  teams_service.py  teams_structures.py  users_controller.py  users_service.py  users_structures.py
control-plane-backend/control_plane_backend/common/: __init__.py  config_loader.py  structures.py
control-plane-backend/control_plane_backend/models/: base.py  purge_queue_models.py  team_metadata_models.py
control-plane-backend/dockerfiles/: Dockerfile-prod
control-plane-backend/tests/: test_main.py  test_memory_lifecycle_runner.py  test_policy_engine.py  test_schedule_manager.py  test_scheduler_backend_override.py
fred-core/: Makefile  pyproject.toml
fred-core/fred_core/: __init__.py
knowledge-flow-backend/: AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
knowledge-flow-backend/.baseline/: basedpyright-baseline.json
knowledge-flow-backend/.github/: copilot-instructions.md
knowledge-flow-backend/alembic/: env.py
knowledge-flow-backend/config/: .env.template  README.md  configuration.yaml  configuration_bench.yaml  configuration_gcp.yaml  configuration_prod.yaml  configuration_test.yaml  configuration_worker.yaml
knowledge-flow-backend/dockerfiles/: Dockerfile-dev  Dockerfile-prod
knowledge-flow-backend/docs/: DEVELOPER_GUIDE.md  TESTING.md
knowledge-flow-backend/knowledge_flow_backend/: application_context.py  main.py  main_worker.py
knowledge-flow-backend/tests/: conftest.py
(+965 files in other folders)
