[project]
name = "fred-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "prometheus-client>=0.20.5",
    "pyjwt>=2.10.1,<3.0.0",
    "psycopg[binary]>=3.1.0",
    "opensearch-py==2.8.0",
    "pandas>=2.2.2,<3.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "sqlalchemy>=2.0.42",
    "sqlparse>=0.5.3",
    "httpx>=0.28.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "azure-identity>=1.25.0",
    "authzed>=1.22.1",
    "openfga-sdk>=0.9.9",
    "python-keycloak>=5.8.1",
    "minio>=7.2.20",
    "temporalio>=1.14.1",
    "uv>=0.9.15",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fred_core*"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "basedpyright==1.31.0",
    "detect-secrets>=1.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
markers = ["integration: marks tests that require external services"]
testpaths = ["fred_core/tests"]
