[project]
name = "knowledge-flow-backend"
readme = "README.md"
version = "1.3.0-post"
description = "Knowledge Flow Backend"
authors = [{ name = "Fred", email = "noreply@example.com" }]
requires-python = ">=3.12,<3.13"

dependencies = [
  "fastapi==0.116.1",
  "langchain>=1.2.7",
  "langchain-community>=0.4.1",
  "langchain-text-splitters>=1.1.0",
  "langchain-postgres>=0.0.16",
  "uvicorn[standard]==0.34.0",
  "openai>=1.104.2,<2.0.0",
  "coloredlogs==15.0.1",
  "PyYAML==6.0.1",
  "pydantic>=2.5.2,<3.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "ipython==8.31.0",
  "python-multipart>=0.0.20,<0.0.23",
  "opensearch-py==2.8.0",
  "python-docx==1.1.2",
  "pypandoc-binary==1.15",
  "pypandoc==1.15",
  "pandas==2.2.3",
  "pypdf==6.7.5",
  "python-pptx==1.0.2",
  "google-cloud-storage==3.1.0",
  "rich==14.0.0",
  "shortuuid==1.0.13",
  "openpyxl==3.1.5",
  # Docling >= 2.78 uses RapidOCR by default on Linux.
  "docling==2.78.0",
  "hf-xet==1.1.1",
  "fastapi-mcp==0.4.0",
  "duckdb>=1.3.2",
  "weaviate-client<4.0.0",
  "fred-core",
  "dateparser>=1.2.2",
  "pymysql>=1.1.1",
  "duckdb-engine>=0.17.0",
  "psycopg2-binary>=2.9.10",
  "sqlparse>=0.5.3",
  "uv",
  "chromadb>=0.5",
  "python-keycloak>=5.8.1",
  "joblib>=1.5.2",
  "matplotlib>=3.10.7",
  "scikit-learn>=1.7.2",
  "neo4j>=5.27.0",
  # ClickHouse client
  "clickhouse-connect>=0.8.0",
  # MarkItDown extras: ensure .docx support is available for the lite DOCX path
  # Note: keep python-docx pinned above; markitdown[docx] will ensure runtime deps
  "markitdown[all]>=0.1.3",
  "pymupdf>=1.26.6",
  "pgvector>=0.2.5",
  "psycopg[binary]>=3.2.1",
  # PyTorch for amd64: CPU-only wheels from pytorch-cpu index
  "torch==2.7.1+cpu; platform_machine == 'x86_64'",
  "torchvision==0.22.1+cpu; platform_machine == 'x86_64'",
  # PyTorch for ARM64 (M1/M2 Macs, Graviton, Raspberry Pi)
  "torch==2.7.1; platform_machine == 'aarch64' or platform_machine == 'arm64'",
  "torchvision==0.22.1; platform_machine == 'aarch64' or platform_machine == 'arm64'",
  "sentence-transformers==5.1.1",
  "umap-learn>=0.5.9.post2",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "sqlmodel>=0.0.32",
  "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
  "pytest-cov==6.1.1",
  "reportlab==4.3.1",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
  "black==24.3.0",
  "isort==5.10.1",
  "tox==4.27.0",
  "pre-commit==4.2.0",
  "bandit==1.8.5",
  "ruff==0.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
packages = [{ include = "knowledge_flow_backend" }]

[tool.ruff]
line-length = 200

[tool.setuptools.packages.find]
include = ["knowledge_flow_backend*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
cache_dir = "/tmp/.pytest"

markers = [
  "content_storage_type(type): mark test to select a content store backend",
  "metadata_storage_type(type): mark test to select a metadata store backend",
  "vector_storage_type(type): mark test to select a vector store backend",
]

[tool.uv.sources]
fred-core = { path = "../fred-core", editable = true }

# Keep CPU-only index for x86_64
torch = { index = "pytorch-cpu", marker = "platform_machine == 'x86_64'" }
torchvision = { index = "pytorch-cpu", marker = "platform_machine == 'x86_64'" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
  "bandit>=1.8.5",
  "basedpyright==1.31.0",
  "detect-secrets>=1.5.0",
  "ruff>=0.12.0",
]

[tool.uv]
# Using `editable_mode = "compat"` when installing fred-core to make editable install work with Pylance (vscode):
# https://github.com/microsoft/pylance-release/blob/main/TROUBLESHOOTING.md#editable-install-modules-not-found
config-settings = { editable_mode = "compat" }
environments = ["sys_platform == 'linux'"]
